Findbugs suggestions and other misc tidying up